Fixing Flaky TCs